# httpC

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/httpClientLibrary/: CMakeLists.txt  http.h  httpMessage.h  httpRequest.h  httpResponse.h
src/: CMakeLists.txt  http-man.h  http.h  httpC-cli.c  httpc-helper.h  main.c
test/: CMakeLists.txt
test/cmocka/1.1.2/: INSTALL_RECEIPT.json
test/cmocka/1.1.2/.brew/: cmocka.rb
test/cmocka/1.1.2/lib/cmake/cmocka/: cmocka-config-version.cmake  cmocka-config.cmake
test/cmocka/1.1.2/lib/pkgconfig/: cmocka.pc
